fix layout issues

--- a/src/components/common/Facility/Facility.module.scss
+++ b/src/components/common/Facility/Facility.module.scss
@@ -26,3 +26,91 @@
     border-top-right-radius: 10px;
   }
 }
+
+@media (max-width: 1920px) {
+  .facility {
+    img {
+      width: 1280px;
+    }
+  }
+}
+
+@media (max-width: 1660px) {
+  .facility {
+    &__title {
+      font-size: 30px;
+    }
+
+    h2 {
+      bottom: 0;
+    }
+
+    img {
+      width: 968px;
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .facility {
+    &__title {
+      font-size: 24px;
+    }
+
+    h2 {
+      bottom: 0;
+    }
+
+    img {
+      width: 800px;
+    }
+  }
+}
+
+@media (max-width: 968px) {
+  .facility {
+    &__title {
+      font-size: 24px;
+    }
+
+    h2 {
+      bottom: 0;
+    }
+
+    img {
+      width: 720px;
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .facility {
+    &__title {
+      font-size: 20px;
+    }
+
+    h2 {
+      bottom: 0;
+    }
+
+    img {
+      width: 500px;
+    }
+  }
+}
+
+@media (max-width: 650px) {
+  .facility {
+    &__title {
+      font-size: 24px;
+    }
+
+    h2 {
+      bottom: 0;
+    }
+
+    img {
+      width: 400px;
+    }
+  }
+}
