--- a/src/components/common/Room/Room.module.scss
+++ b/src/components/common/Room/Room.module.scss
@@ -1,8 +1,14 @@
 .room {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   margin-bottom: 80px;
+  text-align: center;
+  position: relative;
+
+  h2 {
+    position: absolute;
+    bottom: 29px;
+    left: 0;
+    width: 100%;
+  }
 
   &__title {
     color: #fff;
@@ -12,7 +18,54 @@
     text-transform: uppercase;
     background-color: #14274a;
     text-align: center;
-    width: 1517px;
-    padding: 41px 41px;
+    padding: 20px 20px;
+  }
+}
+
+@media (max-width: 1920px) {
+  .room {
+    img {
+      width: 1280px;
+    }
+  }
+}
+
+@media (max-width: 1660px) {
+  .room {
+    &__title {
+      font-size: 30px;
+    }
+
+    h2 {
+      bottom: 11px;
+    }
+
+    img {
+      width: 968px;
+    }
+  }
+}
+
+@media (max-width: 1280px) {
+  .room {
+    &__title {
+      font-size: 24px;
+    }
+
+    h2 {
+      bottom: 8px;
+    }
+
+    img {
+      width: 800px;
+    }
+  }
+}
+
+@media (max-width: 968px) {
+  .room {
+    img {
+      width: 720px;
+    }
   }
 }
