--- a/src/components/pages/Contact/Contact.module.scss
+++ b/src/components/pages/Contact/Contact.module.scss
@@ -1,25 +1,25 @@
 .contactPage {
   &__contact {
     color: #fff !important;
-    font-size: 80px;
+    font-size: 60px;
     font-weight: 700;
     line-height: 78px;
     text-align: center;
   }
 
   &__bodyHeader {
-    margin-bottom: 260px;
+    margin-bottom: 184px;
 
     h2 {
       color: #14274a;
-      font-size: 60px;
+      font-size: 40px;
       font-weight: 700;
       line-height: 58px;
     }
 
     p {
       color: #14274a;
-      font-size: 30px;
+      font-size: 20px;
       font-weight: 400;
       line-height: 28px;
     }
@@ -29,7 +29,7 @@
     .address,
     .contactInfo {
       color: #14274a;
-      font-size: 40px;
+      font-size: 20px;
       font-weight: 400;
       line-height: 38px;
     }
