--- a/src/components/pages/Facilities/Facilities.module.scss
+++ b/src/components/pages/Facilities/Facilities.module.scss
@@ -5,8 +5,8 @@
     h2 {
       color: #14274a;
       text-align: center;
-      font-size: 60px;
-      line-height: 58px;
+      font-size: 50px;
+      line-height: 48px;
       font-weight: 700;
       letter-spacing: 3px;
       margin-bottom: 35px;
