--- a/src/components/pages/Login/Login.module.scss
+++ b/src/components/pages/Login/Login.module.scss
@@ -1,9 +1,8 @@
 .loginPage {
-  height: 388px;
-
   &__form {
     margin: 250px auto;
     width: 400px;
+    height: 359px;
 
     .input {
       font-size: 25px;
